# translucent-compat

./: .gitignore  LICENSE  README.md  blueprint.ts  bun.lockb  index.d.ts  index.ts  jest.config.ts  out.txt  package.json  sample.env  tsconfig.json
.github/WORKFLOWS/: main.yml
.github/workflows/: ci.yml  pump-version.yml
scripts/: pump-version.sh
src/: mod.ts
src/core/: core-browser.ts  core.ts
src/examples/: common.ts  mint_nft.ts
src/lucid/: lucid.ts  tx.ts
src/misc/: bip39.ts  sign_data.ts
src/plutus/: data.ts  time.ts
src/provider/: blockfrost.ts  emulator.ts  kupmios.ts  kupmiosv5.ts  maestro.ts  mod.ts  ogmios.ts
src/translucent/: message.ts  mod.ts  translucent.ts  tx.ts  tx_complete.ts  tx_signed.ts
src/types/: types.ts
src/utils/: cost_model.ts  mod.ts  to.ts  utils.ts
src/wallets/: abstract.ts  chained.ts  mod.ts  private_key.ts  public_wallet.ts  seed.ts  wallet_connector.ts
tests/: data.test.ts  emulator.test.ts  mod.test.ts  util.ts
tests/test_utils/: config.ts  mod.ts
uplc/: Cargo.toml  build.sh
uplc/pkg/: uplc_wrapper_bg.wasm
uplc/pkg-node/: package.json  uplc_wrapper.js
uplc/pkg-web/: package.json  uplc_wrapper.js  uplc_wrapper_bg.js  uplc_wrapper_bg.wasm
